--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,10 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.18</version>
+
+
 		</dependency>
+
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -75,6 +77,11 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>javax.activation-api</artifactId>
 			<version>1.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 
 
