--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,35 @@
 server.port=8081
 
 #JPA
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # spring.jpa.database=mysql
-# spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.
 spring.jpa.show-sql=true
 
 
 
-# Database Name - Library & Database Schema - users
+
+# Database Name - Library
 
 spring.jpa.properties.hibernate.default_schema=k1
 pring.jpa.properties.hibernate.jdbc.time_zone = UTC
+# jdbc.driver=com.mysql.jdbc.Driver
 
 
 # Local Database MySQL
 
 spring.datasource.url=jdbc:mysql://localhost:3306/k1?createDatabaseIfNotExist=true&useFractionalSeconds=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 hibernate.current_session_context_class=thread
 
-# Hibernate Cache
-
-# spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-# spring.jpa.properties.hibernate.cache.use_query_cache=true
-# spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
-# spring.jpa.properties.hibernate.generate_statistics=true
-
-# hibernate.session.events.log=false
+#
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.main.allow-bean-definition-overriding=true
