--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-
-
+			<version>8.0.18</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -79,11 +77,6 @@
 			<version>1.2.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency>
-
 
 
 		<!-- EHCache Core APIs -->
@@ -91,14 +84,13 @@
 
 
 
-			<!--
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
-
+		<!--
+        <exclusions>
+            <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+            </exclusion>
+        </exclusions>
 -->
 
 
@@ -113,7 +105,6 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.5</version>
 		</dependency>
-
 		-->
 
 		<dependency>
@@ -128,6 +119,8 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+
+	<!-- dependencies end -->
 
 	<!-- dependencies end -->
 
