--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,14 +22,14 @@ pring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 # Local Database MySQL
 
-spring.datasource.url=jdbc:mysql://localhost:3306/k1?createDatabaseIfNotExist=true&useFractionalSeconds=true
+spring.datasource.url=jdbc:mysql://localhost:3307/library
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 hibernate.current_session_context_class=thread
 
-#
+
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.main.allow-bean-definition-overriding=true
