--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 
 # Database Name - Library & Database Schema - users
 
-spring.jpa.properties.hibernate.default_schema=k1
+spring.jpa.properties.hibernate.default_schema=library
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 spring.datasource.url=jdbc:mysql://localhost:3307/library
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 
 hibernate.current_session_context_class=thread
 
