added support for multimap

--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,14 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>javax.activation-api</artifactId>
 			<version>1.2.0</version>
-		</dependency>
+	</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/collections -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>collections</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 
 		<!-- EHCache Core APIs -->
@@ -117,6 +123,21 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>24.1.1-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>24.1.1-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 
